--- a/unplugged-retreat/about/index.html
+++ b/unplugged-retreat/about/index.html
@@ -31,26 +31,63 @@
         <img src="" alt="unplugged logo">
       </a>
       <div class="header-divider"></div>
-      <nav>
-        <ul>
-          <li><a href="faq/index.html">FAQ</a></li>
-          <li><a href="about/index.html">About</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="faq/index.html">FAQ</a></li>
+            <li><a href="about/index.html">About</a></li>
+          </ul>
+        </nav>
     </div>
   </header>
 
   <main>
 
-    <section>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+        </div>
+      </div>
+      <!-- mission content wrapper ends -->
     </section>
+    <!-- contact info -->
 
-    <aside>
-    </aside>
-
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </div>
+          <div>
+            <h3>Chat with a Facilitator</h3>
+            <p>
+              555-555-5555<br>
+              facilitator@unplugged.com
+            </p>
+          </div>
+        </address>
+        <!-- contact-content div ends -->
+      </div>
+      <!-- contact content wrapper ends -->
+    </section>
   </main>
   <!-- main wrapper -->
-
 
   <footer>
     <div class="content-wrapper">
@@ -86,7 +123,6 @@
       <p>Copyright 2019 | Unplugged</p>
     </div>
   </footer>
-  
 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
