--- a/unplugged-retreat/index.html
+++ b/unplugged-retreat/index.html
@@ -29,16 +29,18 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
-        <nav>
-          <ul>
-            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank">About</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -121,6 +123,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
+          <figure>
+            <img src="img/unplugged-lacrue.png" alt="group of happy people on outdoor retreat">
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2017</h3>
             <p>
