--- a/unplugged-retreat/about/index.html
+++ b/unplugged-retreat/about/index.html
@@ -29,16 +29,18 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
-        <nav>
-          <ul>
-            <li><a href="faq/index.html">FAQ</a></li>
-            <li><a href="about/index.html">About</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -62,6 +64,8 @@
 
     <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.270292100611!2d-88.42986378427229!3d42.59200847917195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbbacb5568f%3A0xac5d9a1fbeb32534!2s333%20W%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1652078106789!5m2!1sen!2sus" 
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </figure>
     </section>
     <section class="contact-section">
