--- a/unplugged-retreat/about/index.html
+++ b/unplugged-retreat/about/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="../css/main.css">
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/4cd04e3bd5.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
