--- a/unplugged-retreat/faq/index.html
+++ b/unplugged-retreat/faq/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="../css/main.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/4cd04e3bd5.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -66,145 +68,6 @@
     </div>
     <!-- faq content wrapper ends -->
   </main>
-
-  <footer>
-    <div class="content-wrapper">
-      <div class="footer-content">
-        <div class="contact">
-          <h4>Contact</h4>
-          <address>
-            <p>
-              555-555-5555<br>
-              hello@unplugged.com
-            </p>
-          </address>
-        </div>
-        <div class="social">
-          <h4>Social</h4>
-          <div class="social-icons">
-            <p>
-              <a href="https://www.facebook.com/" target="_blank"></a>
-            </p>
-            <p>
-              <a href="https://www.twitter.com/" target="_blank"></a>
-            </p>
-            <p>
-              <a href="https://www.instagram.com/" target="_blank"></a>
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- footer content ends -->
-    </div>
-    <!-- footer content-wrapper ends -->
-    <div class="copyright">
-      <p>Copyright 2019 | Unplugged</p>
-    </div>
-  </footer>
-
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
-
-</html>
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-
-  <!-- Add your site or application content here -->
-  <header>
-    <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
-      <div class="header-divider"></div>
-        <nav>
-          <ul>
-            <li><a href="faq/index.html">FAQ</a></li>
-            <li><a href="about/index.html">About</a></li>
-          </ul>
-        </nav>
-    </div>
-  </header>
-
-  <main>
-
-    <section class="mission">
-      <div class="content-wrapper">
-        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
-        <div class="mission-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-          </p>
-        </div>
-      </div>
-      <!-- mission content wrapper ends -->
-    </section>
-    <!-- contact info -->
-
-    <section class="map">
-      <figure>
-      </figure>
-    </section>
-    <section class="contact-section">
-      <div class="content-wrapper">
-        <h2>Contact us, because you all need this.</h2>
-        <address class="contact-content">
-          <div>
-            <h4>General Information</h4>
-            <p>
-              333 Main St, Lake Geneva, WI 53147<br>
-              555-555-5555<br>
-              hello@unplugged.com
-            </p>
-          </div>
-          <div>
-            <h3>Chat with a Facilitator</h3>
-            <p>
-              555-555-5555<br>
-              facilitator@unplugged.com
-            </p>
-          </div>
-        </address>
-        <!-- contact-content div ends -->
-      </div>
-      <!-- contact content wrapper ends -->
-    </section>
-  </main>
-  <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
