--- a/unplugged-retreat/index.html
+++ b/unplugged-retreat/index.html
@@ -16,10 +16,13 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/4cd04e3bd5.js" crossorigin="anonymous"></script>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -75,6 +78,7 @@
         <div class="features-items">
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
             </p>
             <p class="features-item-description">
               Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
@@ -82,6 +86,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
             </p>
             <p class="features-item-description">
               12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
@@ -89,6 +94,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
             </p>
             <p class="features-item-description">
               Private chef team providing on demand meals - just like your team kitchen.
@@ -96,6 +102,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
             </p>
             <p class="features-item-description">
               5 outdoor obstacle courses, including private beach ½ mile from bungalow.
@@ -103,6 +110,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
             </p>
             <p class="features-item-description">
               Retreat facilitator to manage your day to day activities so you all get a chance to reset.
@@ -110,6 +118,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
             </p>
             <p class="features-item-description">
               Dedicated computer room for times that you must wifi.
