Reorganized files and folders. Updated code to be imported to Vercel successfully

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/4cd04e3bd5.js" crossorigin="anonymous"></script>
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="./unplugged-retreat/css/normalize.css">
+  <link rel="stylesheet" href="./unplugged-retreat/css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -34,7 +34,7 @@
     <div class="content-wrapper">
       <figure>
         <a href="#">
-          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+          <img src="./unplugged-retreat/img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
       <div class="header-divider"></div>
@@ -133,7 +133,7 @@
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
           <figure>
-            <img src="img/unplugged-lacrue.png" alt="group of happy people on outdoor retreat">
+            <img src="./unplugged-retreat/img/unplugged-lacrue.png" alt="group of happy people on outdoor retreat">
           </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2017</h3>
