--- a/faq/index.html
+++ b/faq/index.html
@@ -16,9 +16,9 @@
   <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
-  <!-- Google fonts -->
+  <link rel="stylesheet" href="../unplugged-retreat/css/normalize.css">
+  <link rel="stylesheet" href="../unplugged-retreat/css/main.css">
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/4cd04e3bd5.js" crossorigin="anonymous"></script>
@@ -39,64 +39,35 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="../faq/index.html">FAQ</a></li>
-          <li><a href="index.html">About</a></li>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
-
-    <section class="mission">
-      <div class="content-wrapper">
-        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
-        <div class="mission-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-          </p>
-        </div>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
       </div>
-      <!-- mission content wrapper ends -->
-    </section>
-    <!-- contact info -->
-
-    <section class="map">
-      <figure>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.270292100611!2d-88.42986378427229!3d42.59200847917195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbbacb5568f%3A0xac5d9a1fbeb32534!2s333%20W%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1652078106789!5m2!1sen!2sus" 
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </figure>
-    </section>
-    
-    <section class="contact-section">
-      <div class="content-wrapper">
-        <h2>Contact us, because you all need this.</h2>
-        <address class="contact-content">
-          <div>
-            <h4>General Information</h4>
-            <p>
-              333 Main St, Lake Geneva, WI 53147<br>
-              555-555-5555<br>
-              hello@unplugged.com
-            </p>
-          </div>
-          <div>
-            <h3>Chat with a Facilitator</h3>
-            <p>
-              555-555-5555<br>
-              facilitator@unplugged.com
-            </p>
-          </div>
-        </address>
-        <!-- contact-content div ends -->
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
       </div>
-      <!-- contact content wrapper ends -->
-    </section>
+      <div class="faq-content">
+        <h4>What size teams can you accommodate?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+    </div>
+    <!-- faq content wrapper ends -->
   </main>
-  <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
